--- a/.github/workflows/githubactionworkflow.yml
+++ b/.github/workflows/githubactionworkflow.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
          # Runs a set of commands using the runners shell
       - name: executing remote ssh commands using ssh key
-        uses: Reena221289/cloudsnipeIT@main
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
